# screenshot

./: README.md  pyproject.toml  requirements.txt  setup.py
src/screenshot_emrysr/: screenshot.py
tests/: test.py
